<resources>
    <string name="app_name">Udzkuruni</string>
    <string name="alif">Alif</string>
    <string name="ba">Ba</string>
    <string name="ta">Ta</string>
    <string name="tsa">Tsa</string>
    <string name="jim">Jim</string>
    <string name="kha">Kha</string>
    <string name="kho">Kho</string>
    <string name="dal">Dal</string>
    <string name="dzal">Dzal</string>
    <string name="ro">Ro</string>
    <string name="za">Za</string>
    <string name="sin">Sin</string>
    <string name="syin">Syin</string>
    <string name="sod">Shod</string>
    <string name="dod">dod</string>
    <string name="to">To</string>
    <string name="dho">Dho</string>
    <string name="ain">Ain</string>
    <string name="ghoin">Ghoin</string>
    <string name="fa">Fa</string>
    <string name="kof">Qof</string>
    <string name="kaf">Kaf</string>
    <string name="lam">Lam</string>
    <string name="mim">Mim</string>
    <string name="nun">Nun</string>
    <string name="wawu">Wawu</string>
    <string name="ha">Ha</string>
    <string name="lamalif">Lam Alif</string>
    <string name="hamzah">Hamzah</string>
    <string name="ya">Ya</string>
    <string name="belajar">Belajar</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="evaluasi">Evaluasi Belajar</string>
    <string name="quran">Al-Qur\'an</string>
    <string name="_1">1</string>
    <string name="belajar_huruf_hijaiyah">Belajar Huruf Hijaiyah</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="daftar_huruf">Daftar Huruf</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="belajar_harakat">Belajar Harakat</string>
    <string name="panduan_belajar">Panduan Belajar</string>
    <string name="under_construction">Under Construction !</string>
    <string name="maaf_fitur_sedang_dalam_tahap_pengerjaan">Maaf fitur sedang dalam tahap pengerjaan</string>
    <string name="forum_diskusi">Forum Diskusi</string>
    <string name="dua">2</string>
    <string name="lima">5</string>
    <string name="_6">6</string>
    <string name="tiga">3</string>
    <string name="dommah">Dommah</string>
    <string name="alif_fathah">Alif Fathah</string>
    <string name="cara_baca_fathah">Cara Baca Fathah</string>
    <string name="fathah">Fathah</string>
    <string name="kasrah">Kasrah</string>
    <string name="fathahtain">Fathahtain</string>
    <string name="dommahtain">Dommahtain</string>
    <string name="kasrahtain">Kasrahtain</string>
    <string name="sukun">Sukun</string>
    <string name="petunjuk_pembelajaran">Petunjuk Pembelajaran</string>
    <string name="tombol_daftar_huruf_digunakan_untuk_pergi_ke_halaman_daftar_huruf">Tombol daftar huruf digunakan untuk pergi ke halaman daftar huruf</string>
    <string name="tombol_sebelumnya_digunakan_untuk_pergi_ke_halaman_huruf_sebelumnya">Tombol sebelumnya digunakan untuk pergi ke halaman huruf sebelumnya</string>
    <string name="tombol_selanjutnya_digunakan_untuk_pergi_ke_halaman_huruf_selanjutnya">Tombol selanjutnya digunakan untuk pergi ke halaman huruf selanjutnya</string>
    <string name="kotak_huruf_memutar_suara_nama_huruf_yang_sedang_dipelajari">Kotak huruf memutar suara nama huruf yang sedang dipelajari, dibawah kotak ini terdapat 6 titik dalam dua kolom yang berlabel 1 2 3 4 5 6 dan tersusun secara menurun, jika titik berbunyi angka maka itulah pola huruf tersebut, jika hanya bergetar maka bukan merupakan pola huruf tersebut. Pastikan anda menelusuri semua titik</string>
    <string name="empat">4</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="aplikasi_belajar_hijaiyah_braille_untuk_tunanetra_berbasis_suara_dan_getaran_tampilan_aplikasi_ini_telah_disesuaikan_bagi_penyandang_tunanetra_agar_lebih_mudah_untuk_dioperasikan_fitur_yang_terdapat_dalam_aplikasi_ini_yaitu_fitur_belajar_untuk_mempelajari_pola_braille_huruf_dan_harakat_hijaiyah_fitur_kuis_untuk_menguji_kemampuan_pengguna_serta_fitur_al_qur_an">Aplikasi belajar hijaiyah braille untuk tunanetra berbasis suara dan getaran. Tampilan aplikasi ini telah disesuaikan bagi penyandang tunanetra agar lebih mudah untuk dioperasikan. Fitur yang terdapat dalam aplikasi ini yaitu fitur belajar untuk mempelajari pola braille huruf dan harakat hijaiyah, fitur kuis untuk menguji kemampuan pengguna, serta fitur Al-Qur\'an.</string>
    <string name="developer">Developer :</string>
    <string name="ishardina_cholifatul_hidayati">Ishardina Cholifatul Hidayati</string>
    <string name="novinda_nalaratih">Novinda Nalaratih</string>
    <string name="via_aprillya">Via Aprillya</string>
    <string name="creator">Creator :</string>
    <string name="gd">Graphic Designer :</string>
    <string name="udzkuruni_gmail_com">udzkuruni@gmail.com</string>
    <string name="udzkuruni_wordpress_com">udzkuruni.wordpress.com</string>
    <string name="udzkuruni_apps">udzkuruni.apps</string>
    <string name="udzkuruni">Udzkuruni</string>
</resources>
