<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/udzkuruni_hal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/belajar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/belajar"
        android:layout_width="160dp"
        android:layout_height="234.375dp"
        android:contentDescription="@string/belajar"/>

    <ImageButton
        android:id="@+id/tentang"
        android:layout_width="160dp"
        android:layout_height="234.375dp"
        android:background="@drawable/tentang"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Tentang Kami"/>

    <ImageButton
        android:id="@+id/evaluasi"
        android:layout_width="160dp"
        android:layout_height="234.375dp"
        android:background="@drawable/kuis"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/evaluasi"/>

    <ImageButton
        android:id="@+id/quran"
        android:layout_width="160dp"
        android:layout_height="234.375dp"
        android:background="@drawable/alquran"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/quran"/>


</RelativeLayout>